<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackBackground"
    tools:context=".ui.activity.SignUpActivity">

    <TextView
        android:id="@+id/sign_up_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:paddingStart="36dp"
        android:paddingTop="36dp"
        android:paddingEnd="36dp"
        android:paddingBottom="@dimen/default_padding"
        android:text="@string/sign_up_information"
        android:fontFamily="@font/muli_bold"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/sign_up_sub_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_heading"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:text="@string/sign_up_desc"
        android:textColor="@color/colorTextLightGrey" />

    <TextView
        android:id="@+id/tv_sign_up_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_sub_head"
        android:gravity="center"
        android:paddingStart="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:textColor="@color/colorCatRed"
        android:textSize="12sp"
        android:visibility="invisible"
        tools:text="@string/err_login" />

    <FrameLayout
        android:id="@+id/sign_up_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_above="@id/btn_sign_up_next"
        android:layout_below="@id/tv_sign_up_error" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up_next"
        style="@style/Theme.PopMovies.SignUpButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/sign_up_btn_horizontal_margin"
        android:layout_marginEnd="@dimen/sign_up_btn_horizontal_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:elevation="5dp"
        android:padding="@dimen/default_padding"
        android:stateListAnimator="@null"
        android:text="@string/create"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:translationZ="5dp"
        app:cornerRadius="90dp"
        android:onClick="onNextClick"/>

</RelativeLayout>