<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackBackground"
    tools:context=".ui.activity.ChatActivity">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/toolbar_backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/back"
            android:padding="@dimen/small_margin"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/toolbar_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:paddingEnd="@dimen/huge_padding"
            android:paddingStart="@dimen/default_padding"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="Avatar (2010)" />
    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:id="@+id/chatErr_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/rv_messages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rv_messages"
        app:layout_constraintVertical_bias="0.4">

        <ImageView
            android:id="@+id/iv_chat_err"
            android:layout_width="@dimen/large_icon_size"
            android:layout_height="@dimen/large_icon_size"
            tools:src="@drawable/ic_no_message"
            app:tint="@color/colorLightBlue"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_chat_err"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_margin="@dimen/default_margin"
            android:textColor="@color/colorLightBlue"
            android:textStyle="bold"
            android:layout_gravity="center"
            tools:text="@string/err_no_messages" />
    </LinearLayout>

    <!-- Messages View -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        app:layout_constraintBottom_toTopOf="@id/et_typeMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <!-- Type a message -->
    <EditText
        android:id="@+id/et_typeMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_padding"
        android:background="@drawable/pillbox_dark_inactive_drawable"
        android:focusable="true"
        android:hint="@string/type_msg"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:textColor="@color/colorTextLightGrey"
        android:textColorHint="@color/colorTextGrey"
        android:textSize="@dimen/edit_text_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fab_sendMessage"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Send Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_sendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:src="@drawable/ic_send"
        app:fabCustomSize="45dp"
        app:backgroundTint="@color/colorLightIndigoDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/send" />
</androidx.constraintlayout.widget.ConstraintLayout>