<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorBlackBackground"
    tools:context=".ui.fragment.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Full Name -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_up_item_margin"
            android:layout_marginStart="@dimen/sign_up_item_margin"
            android:layout_marginEnd="@dimen/sign_up_item_margin"
            android:background="@drawable/sign_up_et_state_list_drawable"
            android:paddingTop="6dp"
            android:paddingBottom="2dp"
            android:textColorHint="@color/colorTextLightGrey"
            app:errorEnabled="true">

            <arunkbabu90.popmovies.ui.view.CustomInputTextField
                android:id="@+id/et_sign_up_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="personName"
                android:focusable="true"
                android:textColor="@color/colorTextLightGrey"
                android:fontFamily="@font/muli_light"
                android:hint="@string/full_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:paddingTop="2dp"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_up_item_margin"
            android:layout_marginStart="@dimen/sign_up_item_margin"
            android:layout_marginEnd="@dimen/sign_up_item_margin"
            android:background="@drawable/sign_up_et_state_list_drawable"
            android:paddingTop="6dp"
            android:paddingBottom="2dp"
            android:textColorHint="@color/colorTextLightGrey"
            app:errorEnabled="true">

            <arunkbabu90.popmovies.ui.view.CustomInputTextField
                android:id="@+id/et_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:focusable="true"
                android:fontFamily="@font/muli_light"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingTop="2dp"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_up_item_margin"
            android:layout_marginStart="@dimen/sign_up_item_margin"
            android:layout_marginEnd="@dimen/sign_up_item_margin"
            android:background="@drawable/sign_up_et_state_list_drawable"
            android:paddingTop="6dp"
            android:paddingBottom="2dp"
            android:textColorHint="@color/colorTextLightGrey"
            app:errorEnabled="true">

            <arunkbabu90.popmovies.ui.view.CustomInputTextField
                android:id="@+id/et_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:fontFamily="@font/muli_light"
                android:hint="@string/prompt_password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="2dp"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_up_item_margin"
            android:layout_marginStart="@dimen/sign_up_item_margin"
            android:layout_marginEnd="@dimen/sign_up_item_margin"
            android:background="@drawable/sign_up_et_state_list_drawable"
            android:paddingTop="6dp"
            android:paddingBottom="2dp"
            android:textColorHint="@color/colorTextLightGrey"
            app:errorEnabled="true">

            <arunkbabu90.popmovies.ui.view.CustomInputTextField
                android:id="@+id/et_sign_up_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:fontFamily="@font/muli_light"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="2dp"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>